syntax = "proto3";

option csharp_namespace = "Proto.KvDb.Grains";

import "google/protobuf/wrappers.proto";

message GetMessageResponse {
  bool success = 1;
  google.protobuf.StringValue error_description = 2;
  google.protobuf.StringValue value = 3;
}

message SetMessageRequest {
  google.protobuf.StringValue value = 1;
}

message SetMessageResponse {
  bool success = 1;
  google.protobuf.StringValue error_description = 2;
}

message DelMessageResponse {
  bool success = 1;
  google.protobuf.StringValue error_description = 2;
}

// ---------------------------------------------------------------------------------------------------

message HGetMessageRequest {
  repeated string keys = 1;
}

message HGetMessageResponse {
  message HGetKeyResult {
    bool success = 1;
    google.protobuf.StringValue error_description = 2;
    string key = 3;
    google.protobuf.StringValue value = 4;
  }

  bool success = 1;
  google.protobuf.StringValue error_description = 2;
  repeated HGetKeyResult values = 3;
}

// ---------------------------------------------------------------------------------------------------

message HSetMessageRequest {
  message HSetKeyValue {
    string key = 1;
    google.protobuf.StringValue value = 2;
  }
  
  repeated HSetKeyValue keys_values = 1;
}

message HSetMessageResponse {
  message HSetKeyResult {
    bool success = 1;
    google.protobuf.StringValue error_description = 2;
    string key = 3;
  }
  
  bool success = 1;
  google.protobuf.StringValue error_description = 2;
  repeated HSetKeyResult values = 3;
}

// ---------------------------------------------------------------------------------------------------

message HDelMessageRequest {
  repeated string keys = 1;
}

message HDelMessageResponse {
  message HDelKeyResult {
    bool success = 1;
    google.protobuf.StringValue error_description = 2;
    string key = 3;
  }
  
  bool success = 1;
  google.protobuf.StringValue error_description = 2;
  repeated HDelKeyResult values = 3;
}